Fix column wrapping

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -60,12 +60,6 @@ h1 {
 	justify-content: center;
 }
 
-/* #section-a .content-wrapper {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-} */
-
 h2 {
 	padding: 26px 0;
 	font-size: 26px;
@@ -85,6 +79,7 @@ h2 {
 
 #section-b ul {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
 	gap: 40px;
 	list-style: none;
